Fixed navbar. Update spacing

--- a/assets/scss/overrides/_tailwind.scss
+++ b/assets/scss/overrides/_tailwind.scss
@@ -9,6 +9,7 @@
     font-weight: 300;
     @apply bg-bckg;
     @apply text-black;
+    @apply scroll-smooth
   }
   p {
     a {
